<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/jotter">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="36dp"
                android:id="@+id/title_text"
                android:text="@string/title_text"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:paddingTop="10dp" />

    <ImageButton
        android:layout_below="@id/title_text"
        android:contentDescription="Boring Tasks"
    android:scaleType="fitCenter"
    android:layout_marginTop="10dp"
    android:id="@+id/boring_button"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/boring"
    android:text="Boring"
        android:background="?attr/selectableItemBackground"
        android:layout_marginLeft="30dp" />

            <TextView
                android:layout_toRightOf="@id/boring_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:id="@+id/boring_text"
                android:text="@string/boring_title"
                android:layout_alignBottom="@+id/boring_button"
                android:layout_alignTop="@+id/boring_button"
                android:textStyle="bold"
                android:gravity="fill"
                android:paddingRight="5dp" />

    <ImageButton
        android:layout_below="@id/boring_button"
        android:contentDescription="Work Tasks"
    android:scaleType="fitCenter"
    android:layout_marginTop="10dp"
    android:id="@+id/work_button"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/work"
        android:background="?attr/selectableItemBackground"
        android:layout_marginLeft="30dp" />

            <TextView
                android:layout_toRightOf="@id/work_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:id="@+id/work_text"
                android:text="@string/work_title"
                android:layout_alignBottom="@+id/work_button"
                android:layout_alignTop="@+id/work_button"
                android:gravity="fill"
                android:textStyle="bold"
                android:paddingRight="5dp" />

    <ImageButton
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/work_button"
        android:contentDescription="Social Tasks"
    android:scaleType="fitCenter"
    android:layout_marginTop="10dp"
    android:id="@+id/social_button"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/social"
        android:layout_marginLeft="30dp" />

            <TextView
                android:layout_toRightOf="@id/social_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:id="@+id/social_text"
                android:text="@string/social_title"
                android:layout_alignBottom="@+id/social_button"
                android:layout_alignTop="@+id/social_button"
                android:textStyle="bold"
                android:gravity="fill"
                android:paddingRight="5dp" />

    <ImageButton
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/social_button"
        android:contentDescription="Recreation Goals"
    android:scaleType="fitCenter"
    android:layout_marginTop="10dp"
    android:id="@+id/recreation_button"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/recreation"
        android:layout_marginLeft="30dp" />

            <TextView
                android:layout_toRightOf="@id/recreation_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:id="@+id/recreation_text"
                android:text="@string/recreation_title"
                android:layout_alignBottom="@+id/recreation_button"
                android:layout_alignTop="@+id/recreation_button"
                android:gravity="fill"
                android:textStyle="bold"
                android:paddingRight="5dp" />

    <ImageButton
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/recreation_button"
        android:contentDescription="Life Goals"
    android:scaleType="fitCenter"
    android:layout_marginTop="10dp"
    android:id="@+id/life_button"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/life"
        android:layout_marginLeft="30dp" />

            <TextView
                android:layout_toRightOf="@id/recreation_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:id="@+id/life_text"
                android:text="@string/life_title"
                android:layout_alignBottom="@+id/life_button"
                android:layout_alignTop="@+id/life_button"
                android:textStyle="bold"
                android:gravity="fill"
                android:paddingRight="5dp" />


    <Button
        android:layout_below="@id/life_button"
        android:text="Clear Memory"
        android:hint="@string/clear_mem_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/clear_mem_button"
        android:layout_marginLeft="30dp" />


        </RelativeLayout>
    </ScrollView>
</LinearLayout>

